feat: add high-score. [#11]