@@ -2,9 +2,12 @@ package thd.game.utilities;
 
 import thd.game.level.Difficulty;
 
+import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.List;
 
 /**
  * Used to read and write the difficulty to / from files.
@@ -19,7 +22,13 @@ public class FileAccess {
      */
     public static void writeDifficultyToDisc(Difficulty difficulty) {
         try {
-            Files.writeString(WICHTEL_GAME_FILE, difficulty.toString());
+            List<String> lines = Files.readAllLines(WICHTEL_GAME_FILE);
+            if (lines.size() < 1) {
+                lines.add(difficulty.toString());
+            } else {
+                lines.set(0, difficulty.toString());
+            }
+            Files.write(WICHTEL_GAME_FILE, lines);
         } catch (IOException e) {
             e.printStackTrace();
             System.exit(1);
@@ -35,10 +44,38 @@ public class FileAccess {
     public static Difficulty readDifficultyFromDisc() {
         try {
             String content = Files.readString(WICHTEL_GAME_FILE);
-            return content.equals(Difficulty.EASY.toString()) ? Difficulty.EASY : Difficulty.STANDARD;
+            return content.startsWith(Difficulty.EASY.toString()) ? Difficulty.EASY : Difficulty.STANDARD;
         } catch (IOException e) {
             return Difficulty.STANDARD;
         }
+    }
 
+    /**
+     * Updates the high-score, if the current score is greater than the score stored in the file.
+     */
+    public static void updateHighScore(int currentScore) {
+        try {
+            List<String> content = Files.readAllLines(WICHTEL_GAME_FILE);
+            if (content.size() < 2) {
+                content.add(String.valueOf(currentScore));
+            } else if (Integer.parseInt(content.get(1)) < currentScore) {
+                content.set(1, String.valueOf(currentScore));
+            }
+            Files.write(WICHTEL_GAME_FILE, content, StandardCharsets.UTF_8);
+        } catch (IOException e) {
+            e.printStackTrace();
+            System.exit(1);
+        }
+    }
+
+    private static String formatContent(List<String> content) {
+        StringBuilder sb = new StringBuilder();
+        for (int lineIndex = 0; lineIndex < content.size(); lineIndex++) {
+            sb.append(content.get(lineIndex));
+            if (lineIndex < content.size() - 1) {
+                sb.append("\n");
+            }
+        }
+        return sb.toString();
     }
 }
